@@ -32,15 +32,15 @@ class TestLiner(TestCase):
 
         text = "<i>I got to the restaurant a little early.</i>"
         self.liner.set_text(text)
-        assert self.liner.is_legal
+        assert self.liner.is_legal()
 
         text = "He'soffdutytodayHe'soffdutytodayHe'soffdutytoday."
         self.liner.set_text(text)
-        assert self.liner.is_legal
+        assert self.liner.is_legal()
 
         text = "<i>I got to the restaurant a little early little early.</i>"
         self.liner.set_text(text)
-        assert not self.liner.is_legal
+        assert not self.liner.is_legal()
 
     def test__get_length(self):
 
