@@ -1,5 +1,10 @@
 2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* gaupol/liner.py (is_legal):
+	Make this a method again.
+
+2007-04-12  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* gaupol/enclib.py:
 	* gaupol/util.py:
 	Replace memoize with once where appropriate.
